--- a/hakkinda.html
+++ b/hakkinda.html
@@ -4,65 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/menu.js" defer></script>
     <title>Hakkinda</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
 <div class="container">
-    <div class="navbar">
-
-        <div class="logo">
-            <a href="index.html">aasdasd</a>
-        </div>
-        <ul>
-            <li><a href="index.html">ANASAYFA</a></li>
-            <li><a href="hakkinda.html" class="activepage">Hakkında</a></li>
-            <li><a href="ozgecmis.html">Özgeçmiş</a></li>
+    <nav class="navbar">
+        <div class="brand-title">217Rize</div>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+          <ul>
+            <li><a href="index.html">Anasayfa</a></li>
             <li><a href="sehrim.html">Şehrim</a></li>
             <li><a href="mirasimiz.html">Mirasımız</a></li>
+            <li><a href="hakkinda.html" class="activepage">Hakkında</a></li>
             <li><a href="ilgialanlarim.html">İlgi Alanlarım</a></li>
+            <li><a href="ozgecmis.html">Özgeçmiş</a></li>
             <li><a href="iletisim.html">İletişim</a></li>
-        </ul>
-    </div>
+            <li><a href="login.html">Giriş Yap</a></li>
+          </ul>
+        </div>
+    </nav>
 
     <div class="about">
 
         <div class="bilgi">
+            <img src="img/youtubelogo.jpg" style="width:50%">
             <h2>AOO Kimdir?</h2>
-            <img src="img/youtubelogo.jpg" style="width:10%">
             <p> &nbsp &nbsp Sakarya Üniversitesi'nde Bilgisayar Mühendisliği okumaktayım. Bilgisayarlar ile 3 yaşımdan beri haşır neşirim. Genelde oyun oynarım. 
                 Hobilerim; spor, photoshop, oyun, müzik gibi gibi.
             </p>
+            <div class="col1">
+                <a href="https://www.instagram.com/mhanzofficial/"><img src="img/instagram.png" style="width:30px"></a>
+            </div>
+            <div class="col1">
+                <a href="https://steamcommunity.com/id/ahmozn/"><img src="img/steam.jpg" style="width: 30px;"></a>
+            </div><br><br><br><br>
         </div>
-        <div class="irtibat">
-            </div>
-            <div class="col1">
-              <a href="https://www.instagram.com/mhanzofficial/"><img src="img/instagram.png" style="width:30px"></a>
-            </div>
-            <div class="col1">
-              <a href="https://steamcommunity.com/id/ahmozn/"><img src="img/steam.jpg" style="width: 30px;"></a>
-            </div>
-          </div>
     </div>
 
 </div>
 
 <div class="footerContainer">
-    <footer class="footer">
-      <p class="yapimci">&copy; 2022, AOO </p>
-      <ul class="footerLinkler">
-            <li><a href="index.html">ANASAYFA</a></li>
-            <li><a href="hakkinda.html">Hakkında</a></li>
-            <li><a href="ozgecmis.html">Özgeçmiş</a></li>
-            <li><a href="sehrim.html">Şehrim</a></li>
-            <li><a href="mirasimiz.html">Mirasımız</a></li>
-            <li><a href="ilgialanlarim.html">İlgi Alanlarım</a></li>
-            <li><a href="iletisim.html">İletişim</a></li>
-      </ul>
-    </footer>
+    <p class="yapimci">&copy; 2022, AOO </p>
+    <div class="footcol">
+        <a href="index.html">ANASAYFA</a>
+    </div>
+    <div class="footcol">
+        <a href="hakkinda.html">Hakkında</a>
+    </div>
+    <div class="footcol">
+        <a href="ozgecmis.html">Özgeçmiş</a>
+    </div>
+    <div class="footcol">
+        <a href="sehrim.html">Şehrim</a>
+    </div>
+    <div class="footcol">
+        <a href="mirasimiz.html">Mirasımız</a>
+    </div>
+    <div class="footcol">
+        <a href="ilgialanlarim.html">İlgi Alanlarım</a>
+    </div>
+    <div class="footcol">
+        <a href="iletisim.html">İletişim</a>
+    </div>
+    <div class="footcol">
+        <a href="login.html">Giriş Yap</a>
+      </div>
 </div>
-
 
 </body>
 </html>
