--- a/ilgialanlarim.html
+++ b/ilgialanlarim.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/menu.js" defer></script>
-    <title>Mirasimiz</title>
+    <title>Ilgi Alanlarim</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -17,41 +17,24 @@
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
-      </a>
-      <div class="navbar-links">
+    </a>
+    <div class="navbar-links">
       <ul>
         <li><a href="index.html">Anasayfa</a></li>
         <li><a href="sehrim.html">Şehrim</a></li>
-        <li><a href="mirasimiz.html" class="activepage">Mirasımız</a></li>
+        <li><a href="mirasimiz.html">Mirasımız</a></li>
         <li><a href="hakkinda.html">Hakkında</a></li>
-        <li><a href="ilgialanlarim.html">İlgi Alanlarım</a></li>
+        <li><a href="ilgialanlarim.html" class="activepage">İlgi Alanlarım</a></li>
         <li><a href="ozgecmis.html">Özgeçmiş</a></li>
         <li><a href="iletisim.html">İletişim</a></li>
         <li><a href="login.html">Giriş Yap</a></li>
       </ul>
     </div>
   </nav>
-
-    <div class="miras">
-      <div class="mirascol">
-        <img src="img/zilkale.jpg" class="zilkale" style="width: 80%;">
-        <h4>Zilkale</h4>
-        <p id="zilkale"> &nbsp &nbsp Zilkale ya da asıl adıyla Zirkale, Rize'nin Çamlıhemşin ilçesi sınırlarında, Fırtına Deresi Vadisi’nde yer alan, ilk inşa tarihi kesin olarak bilinmeyen bir kaledir.
-
-          14. veya 15. yüzyılda inşa edilen kale, 1800'lü yılların sonuna kadar kullanılmıştır. Sekiz burç ve bir gözetleme kulesinden oluşur. Savunma hendeği durumundaki Zil deresine merdivenle inilir. Kale, 1. derece arkeolojik sit alanı içerisindedir.
-        </p>
-      </div>
-      <div class="mirascol">
-        <img src="img/caybardagi.jpg" class="bardak" style="width: 80%">
-        <h4 id="cayBardagiBaslik">Çay Bardağı Heykeli</h4>  
-        <p id="cayBardagi"> &nbsp &nbsp Yapımına yaklaşık 47 milyon lira harcanmış ve guinness'e aday bir heykel. Ha bir de ışıklı mışıklı. Başka bir özelliği yok.</p>
-      </div>
-      
-    </div>
-
+  <div class="api">
+    <h1>API entegre etmeyi beceremediğimden bu sayfa boş bırakılmıştır.</h1>
+  </div>
 </div>
-
-
 
 
 
